fix: 修复测试发现的运行时问题并记录测试结果
后端:
- WorkflowAutoSkipService: Stream.toList() 改为 collect(Collectors.toList())，
  修复运行时 'Unresolved compilation problem' 崩溃（问题10）
- 实时跳过监听器对 'already deleted' 异常降级为 DEBUG，避免与启动兜底
  重复执行时产生 ERROR 日志（问题11）；保留启动兜底保证首个跳过节点被处理
- EntityListPermission: @TableField update 改为 updateStrategy（MP 3.5.16 API）
- WorkflowAutoSkipService: 补全 FlowableEventListener 接口方法
  (getOnTransaction/isFireOnTransactionLifecycleEvent)

前端:
- ProcessDesign XML 弹窗: 修复 fullscreen 模式下选择器失效导致整页滚动，
  改为标题/底部固定、中间内容独立滚动
- NodeConfigPanel: tab 保存提示改为'暂存成功'，父组件只置脏不弹提示，
  避免一次保存弹出多个 toast

文档:
- 新增测试问题记录，包含 11 个发现的问题及修复状态